fix links and images

--- a/src/Components/BMS/BMS.css
+++ b/src/Components/BMS/BMS.css
@@ -1,7 +1,7 @@
 .beradcrumb {
     margin-top: 4%;
 }
-.parallax {
+.bms-parallax {
     /* The image used */
     margin-top: -15px;
     background-image: url("../img/network-cctv-camera-55791-2403553.jpg")!important;
