--- a/src/Components/Electrical/Electrical.css
+++ b/src/Components/Electrical/Electrical.css
@@ -1,10 +1,10 @@
 .beradcrumb {
     margin-top: 4%;
 }
-.parallax {
+.electric-parallax {
     /* The image used */
     margin-top: -15px;
-    background-image: url("../img/what_is_hvac_and_where_is_it_used.jpg");
+    background-image: url("../img/3d-animation-moving-down-electrical-powerline-with-bright-background_sl_ozijle_thumbnail-full01.jpg");
 
     /* Set a specific height */
     min-height: 700px; 
