--- a/src/Components/Firefighting/Firefighting.css
+++ b/src/Components/Firefighting/Firefighting.css
@@ -1,7 +1,7 @@
 .beradcrumb {
     margin-top: 4%;
 }
-.parallax {
+.fire-parallax {
     /* The image used */
     margin-top: -15px;
     background-image: url("../img/sprinklers-hydrants-hose-reel-port_macquarie-1200x800.jpg");
