--- a/src/Components/HVAC/Hvac.css
+++ b/src/Components/HVAC/Hvac.css
@@ -4,7 +4,7 @@
 .beradcrumb {
     margin-top: 4%;
 }
-.parallax {
+.hvac-parallax {
     /* The image used */
     margin-top: -15px;
     background-image: url("../img/what_is_hvac_and_where_is_it_used.jpg");
