--- a/src/Components/Interiors/Interiors.css
+++ b/src/Components/Interiors/Interiors.css
@@ -1,7 +1,7 @@
 .beradcrumb {
     margin-top: 4%;
 }
-.parallax {
+.interiors-parallax {
     /* The image used */
     margin-top: -15px;
     background-image: url("../img/machine-blueprint.jpg");
