--- a/src/Components/PHE/PHE.css
+++ b/src/Components/PHE/PHE.css
@@ -1,7 +1,7 @@
 .beradcrumb {
     margin-top: 4%;
 }
-.parallax {
+.phe-parallax {
     /* The image used */
     margin-top: -15px;
     background-image: url("../img/hand-powered-water-pump-people-pump-the-old-water-hand-pump_edgrukoqdl__F0000.jpg");
