--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -19,3 +19,49 @@
     transition: all ease 0.5s;
    
 }
+.blog-right-content {
+    margin: 20px 0;
+}
+.side-blog-custom-content {
+    padding: 20px 0;
+    padding-bottom: 0;
+
+}
+/* .side-blog-custom-content2 {
+    padding-top: -20px;
+} */
+.side-blog-custom-content p {
+    font-size: 14px;
+}
+.blog-right-content ul li a:focus {
+font-weight: bold;
+color: #000;
+}
+.blog-right-content ul li a:active {
+    font-weight: bold;
+    color: #000;
+    }
+.blog-right-content ul li a{
+    color: #999;
+}
+.blog-right-slider {
+    margin-top: 50px;
+}
+.blog-right-slider p{
+    text-transform: uppercase;
+    font-size: 18px;
+}
+.blog-right-slider input {
+   border-radius: 0;
+    box-shadow: none;
+    
+}
+.blog-right-slider input:focus {
+    box-shadow: none;
+    /* border-bottom: solid thin #0074d9; */
+    transition: all ease 0.5s;
+}
+.custom-blog-btn {
+    margin-top: 10px;
+    border-radius: 0;
+}
