add some images and fix inner pages

--- a/src/Components/Firefighting/Firefighting.css
+++ b/src/Components/Firefighting/Firefighting.css
@@ -4,14 +4,23 @@
 .fire-parallax {
     /* The image used */
     margin-top: -15px;
-    background-image: url("../img/sprinklers-hydrants-hose-reel-port_macquarie-1200x800.jpg");
+    background-image: url("../img/Optimized-control-dirty-electric-942316.jpg");
 
     /* Set a specific height */
-    min-height: 700px; 
-
+    /* min-height: 700px;  */
+    padding: 15%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.fire-parallax::after {
+    content: 'Fire Fighting';
+    color: #fff;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding: 0 30%;
+    letter-spacing: 10px;
 }
