--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -107,6 +107,46 @@ footer,
       transition-timing-function: cubic-bezier(0, 0, 0, 1);
 }
 /**********end parallax css*********/
+#header {
+  width: 100%;
+  height: 600px;
+  overflow: hidden;
+  background: #000;
+}
+
+#header__background {
+  /* background-image: url("https://unsplash.it/2000/1200/?random"); */
+  background-image: url('../img/bg-header.jpg');
+  background-size: cover;
+  background-position: center;
+  width: inherit;
+  height: inherit;
+  display: table;
+}
+
+#header__centered {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.4);
+}
+
+#header__centered > img {
+  display: block;
+  margin: 0 auto;
+  width: 130px;
+  border: 1px solid #fff;
+  border-radius: 100%;
+}
+
+#header__centered > h1 {
+  font-size: 5em;
+  color: #fff;
+  letter-spacing: 5px;  
+}
+
+
+
 
 /*******mission container here********/
 .mission-container {
