--- a/src/Components/BMS/BMS.css
+++ b/src/Components/BMS/BMS.css
@@ -4,14 +4,26 @@
 .bms-parallax {
     /* The image used */
     margin-top: -15px;
-    background-image: url("../img/network-cctv-camera-55791-2403553.jpg")!important;
+    background-image: url("../img/Optimized-architecture-business-cabinet-325229.jpg")!important;
 
     /* Set a specific height */
-    min-height: 700px; 
-
+    /* min-height: 700px;  */
+    padding: 15%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.bms-parallax::after {
+    content: 'Business Management Services';
+    color: #fff;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding: 0 5%;
+    letter-spacing: 10px;
+}
+.hvac-content {
+    padding: 3%;
 }
