--- a/src/Components/PHE/PHE.css
+++ b/src/Components/PHE/PHE.css
@@ -4,14 +4,24 @@
 .phe-parallax {
     /* The image used */
     margin-top: -15px;
-    background-image: url("../img/hand-powered-water-pump-people-pump-the-old-water-hand-pump_edgrukoqdl__F0000.jpg");
+    background-image: url("../img/Optimized-AdobeStock_108906306_Preview.jpg");
 
     /* Set a specific height */
-    min-height: 700px; 
+    /* min-height: 700px;  */
+    padding: 15%;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.phe-parallax::after {
+    content: 'Public Health Engineering';
+    color: #fff;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding: 0 10%;
+    letter-spacing: 10px;
 }
